django实现用户中心的登出功能

--- a/Django/轻编程/MyBlog/users/templates/users/user_profile.html
+++ b/Django/轻编程/MyBlog/users/templates/users/user_profile.html
@@ -62,10 +62,10 @@
                                     </div>
                                     <hr class="dropdown-divider">
                                     <div class="dropdown-item">
-                                        <a class=" has-text-grey-dark" href="">
+                                        <a class=" has-text-grey-dark" href="{% url 'users:logout' %}">
                                             <span class="icon is-small">
                                                 <i class="fas fa-power-off" aria-hidden="true"></i>
-                                            </span>&nbsp;&nbsp;
+                                            </span>
                                             退出登录
                                         </a>
                                     </div>
