博客首页制作及美化

--- a/Django/轻编程/MyBlog/blog/templates/blog/index.html
+++ b/Django/轻编程/MyBlog/blog/templates/blog/index.html
@@ -1,10 +1,4 @@
-<h1>查询博客分类：</h1>
-{% for category in category_list %}
-	{{ category.name }}
-{% endfor %}
-
-
-<h1>查询博客文章：</h1>
-{% for post in post_list %}
-	{{ post.title }}
-{% endfor %}
+{% extends "blog/base.html" %}
+{% block right %}
+  <div class="box">youc</div>
+{% endblock right %}
