--- a/Django/轻编程/MyBlog/users/templates/users/user_profile.html
+++ b/Django/轻编程/MyBlog/users/templates/users/user_profile.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- 头部导航 -->
-    <nav class="navbar">
+    <nav class="navbarn has-shadow">
         <div class="container">
             <div class="navbar-brand">
                 <a href="" class=" navbar-item">
