1、登录注册url 2、分类列表页 3、文章详情页

--- a/Django/轻编程/MyBlog/users/templates/users/register.html
+++ b/Django/轻编程/MyBlog/users/templates/users/register.html
@@ -9,11 +9,17 @@
 
 </head>
 <body>
-    <form method="post">
-        {{ form.error}}
-        {%csrf_token%}
-        {{form.as_p}}
-        <button>注册</button>
-    </form>
+    <div class="columns">
+        <div class="container  column is-half">
+            <form method="post">
+                {{ form.error}}
+                {%csrf_token%}
+                {{form.as_p}}
+                <button>注册</button>
+            </form>
+        </div>
+    </div>
+    
+  
 </body>
 </html>
