--- a/Django/轻编程/MyBlog/blog/templates/blog/base.html
+++ b/Django/轻编程/MyBlog/blog/templates/blog/base.html
@@ -29,12 +29,12 @@
 			<div id="navbarBasicExample" class="navbar-menu">
 				<div class="navbar-start">
 					{% block navbar-start %}
-					<a class="navbar-item">
+					<a class="navbar-item" href="{%url 'blog:index' %}">
 						首页
 					</a>
 					{% get_category_list as category_list %}
 					{% for category in category_list %}
-					<a class="navbar-item">
+					<a class="navbar-item" href="{% url 'blog:category_list' category.id%}">
 						{{ category.name}}
 					</a>
 
@@ -66,13 +66,18 @@
 				<div class="navbar-end">
 					{% block navbar-end %}
 					<div class="navbar-item">
+						{% if user.is_authenticated %}
+						<a href="{% url 'users:user_profile'%}" class="button is-info">{{request.user.username}}</a>
+						<a href="{% url 'users:logout'%}" class="button is-primary">退出</a>
+						{%else%}
 						<div class="buttons">
-							<a class="button is-primary">
-								<strong>Sign up</strong>
+							<a class="button is-primary" href="{%url 'users:register'%}" target="_blank">
+								<strong>注册</strong>
 							</a>
-							<a class="button is-light">
-								Log in
+							<a class="button is-light" href="{%url 'users:login'%}" target="_blank">
+								登录
 							</a>
+							{%endif%}
 						</div>
 					</div>
 					{% endblock navbar-end %}
@@ -89,32 +94,32 @@
 						{% for post in post_list %}
 						<div class="box">
 							<h1 class="is-size-5 has-text-weight-bold">
-								<a href="">{{ post.title }}</a>
+								<a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a>
 							</h1>
 							<div class="is-size-7 has-text-grey-light pt-1 pb-1">
 								<span class="mr-3">作者：{{ post.owner}}</span>
 								<span>发布日期：{{ post.add_date}}</span>
 							</div>
-	
+
 							<p class="mt-3">
 								{{post.desc|truncatechars:45}}
 							</p>
 						</div>
 						{% endfor %}
-	
+
 						{% endblock section %}
-	
+
 					</div>
 					<div class="column is-4">
 						{% block right %}
-						  右侧
+						右侧
 						{% endblock right %}
 					</div>
 				</div>
-	
+
 			</div>
 		</section>
-		
+
 
 	</div>
 
