实现文章上下篇

--- a/Django/轻编程/MyBlog/users/templates/users/user_profile.html
+++ b/Django/轻编程/MyBlog/users/templates/users/user_profile.html
@@ -39,7 +39,7 @@
                                         {% endif %}
                                     </figure>&nbsp;&nbsp;
                                         
-                                        {% if user.userprofile.nike_name %}
+                                        {% if user.userprofile.nick_name %}
                                         <span class="has-text-grey-dark">{{ user.userprofile.nike_name }}</span>
                                         {% else %}
                                         <span class="has-text-grey-dark">{{ user.username }}</span>
