--- a/Django/轻编程/MyBlog/blog/templates/blog/detail.html
+++ b/Django/轻编程/MyBlog/blog/templates/blog/detail.html
@@ -12,4 +12,26 @@
         {{post.content|safe}}
     </div>
 </div>
+
+<div class="box">
+    <div class="level">
+        <div class="level-left">
+            {% if prev_post %}
+            <span>上一篇：</span>
+            <a href="{% url 'blog:post_detail' prev_post.id %}" class="level-item">{{prev_post.title}}</a>
+            {% else %}
+            <span class="has-text-danger-dark is-size-7">没有上一篇了！</span>
+            
+            {% endif %}
+        </div>
+        <div class="level-right">
+            {% if next_post %}
+            <span >下一篇：</span>
+            <a href="{% url 'blog:post_detail' next_post.id %}" class="level-item">{{next_post.title}}</a>
+            {% else %}
+            <span class="has-text-danger-dark is-size-12">已经是最后一篇！</span>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
