实现侧边栏功能

--- a/Django/轻编程/MyBlog/blog/templates/blog/base.html
+++ b/Django/轻编程/MyBlog/blog/templates/blog/base.html
@@ -112,7 +112,15 @@
 					</div>
 					<div class="column is-4">
 						{% block right %}
-						右侧
+						{% get_sidebar_list as sidebar_list%}
+						{% for sidebar in sidebar_list%}
+						<div class="box">
+							<h1 class="is-size-5 title">{{sidebar.title}}</h1>
+							<p>{{sidebar.get_content|safe}}</p>
+							
+						</div>
+							
+						{%endfor%}
 						{% endblock right %}
 					</div>
 				</div>
