--- a/Django/轻编程/MyBlog/blog/templates/blog/sidebar/search.html
+++ b/Django/轻编程/MyBlog/blog/templates/blog/sidebar/search.html
@@ -1,1 +1,11 @@
-搜索：<input type="text" name="" id="">
+<form action="{% url 'blog:search' %}" method="get">
+    {% csrf_token %}
+    <div class="field has-addons">
+        <div class="control is-expanded">
+            <input type="search" class="input" name="keyword" placeholder="{{keyword}}" value="{{ keyword }}">
+        </div>
+        <div class="control">
+            <input class="button is-primary" type="submit" value="搜索">
+        </div>
+    </div>
+</form>
